--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "dayjs": "^1.8.17",
+    "element-ui": "^2.13.0",
     "json-bigint": "^0.3.0",
     "socket.io-client": "^2.3.0",
     "vant": "^2.2.14",
